# msg-test

./: pyproject.toml
.github/workflows/: release.yml
src/endstone_welcome_message/: config.toml  welcome_message.py
