[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-welcome-message"
version = "0.1.8"
authors = [
    { name = "cenk", email = "cenk@cenk.app" }
]
description = "An Endstone plugin that allows you to send players a welcome message via chat, tip or toast when they join the server."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["minecraft", "endstone", "plugin", "welcome", "message", "chat", "tip", "toast"]

[project.urls]
Homepage = "https://github.com/cenk/endstone-welcome-message"

[project.entry-points."endstone"]
welcome-message = "endstone_welcome_message:WelcomeMessage"
